Fix post image dimensions on mobile
This closes #19

--- a/src/styles/modules/post/single.sass
+++ b/src/styles/modules/post/single.sass
@@ -10,6 +10,7 @@
         img
             max-width: 100%
             max-height: 600px
+            height: auto
             margin: 20px 0
             border: 1px solid rgba(0, 0, 0, 0.1)
             display: block
